--- a/src/output.css
+++ b/src/output.css
@@ -570,12 +570,12 @@ video {
   top: 1rem;
 }
 
-.z-\[5\]{
-  z-index: 5;
-}
-
 .z-10{
   z-index: 10;
+}
+
+.z-\[5\]{
+  z-index: 5;
 }
 
 .col-span-6{
@@ -588,10 +588,6 @@ video {
 
 .mb-1{
   margin-bottom: 0.25rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .mb-5{
@@ -610,6 +606,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-4{
+  margin-top: 1rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -622,16 +622,36 @@ video {
   display: flex;
 }
 
+.table{
+  display: table;
+}
+
+.grid{
+  display: grid;
+}
+
 .h-5{
   height: 1.25rem;
+}
+
+.h-\[100vh\]{
+  height: 100vh;
 }
 
 .h-\[25px\]{
   height: 25px;
 }
 
+.h-\[300px\]{
+  height: 300px;
+}
+
 .h-\[50\%\]{
   height: 50%;
+}
+
+.h-\[80px\]{
+  height: 80px;
 }
 
 .h-full{
@@ -658,6 +678,10 @@ video {
   width: 100px;
 }
 
+.w-\[150px\]{
+  width: 150px;
+}
+
 .w-\[300px\]{
   width: 300px;
 }
@@ -670,12 +694,40 @@ video {
   width: 40%;
 }
 
+.w-\[40px\]{
+  width: 40px;
+}
+
+.w-\[49\%\]{
+  width: 49%;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.w-\[500px\]{
+  width: 500px;
+}
+
 .w-\[50px\]{
   width: 50px;
 }
 
+.w-\[58\%\]{
+  width: 58%;
+}
+
 .w-\[60\%\]{
   width: 60%;
+}
+
+.w-\[80\%\]{
+  width: 80%;
+}
+
+.w-\[800px\]{
+  width: 800px;
 }
 
 .w-\[90\%\]{
@@ -704,12 +756,24 @@ video {
   animation: spin 1s linear infinite;
 }
 
+.cursor-default{
+  cursor: default;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
 
 .flex-col{
   flex-direction: column;
+}
+
+.place-content-center{
+  place-content: center;
+}
+
+.place-items-center{
+  place-items: center;
 }
 
 .items-center{
@@ -770,6 +834,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -788,8 +858,16 @@ video {
   overflow-y: hidden;
 }
 
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-lg{
@@ -813,6 +891,10 @@ video {
   border-width: 1px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -825,6 +907,16 @@ video {
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.border-purple-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(168 85 247 / var(--tw-border-opacity));
 }
 
 .border-sky-200{
@@ -847,9 +939,12 @@ video {
   border-bottom-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+.bg-\[\#11111190\]{
+  background-color: #11111190;
+}
+
+.bg-\[\#ffffff60\]{
+  background-color: #ffffff60;
 }
 
 .bg-primary{
@@ -867,6 +962,21 @@ video {
   background-color: rgb(186 230 253 / var(--tw-bg-opacity));
 }
 
+.bg-sky-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity));
+}
+
+.bg-sky-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.bg-slate-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .bg-teal-600{
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
@@ -877,16 +987,20 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[url\(\"src\/assets\/images\/bg__1\.png\"\)\]{
+  background-image: url("src/assets/images/bg__1.png");
+}
+
 .bg-\[url\(\'src\/assets\/images\/bg__1\.jpg\'\)\]{
   background-image: url('src/assets/images/bg__1.jpg');
 }
 
-.bg-gradient-to-r{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .bg-\[url\(\'src\/assets\/images\/bg__2\.jpg\'\)\]{
   background-image: url('src/assets/images/bg__2.jpg');
+}
+
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-gray-900{
@@ -927,6 +1041,10 @@ video {
   padding: 4rem;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
@@ -957,6 +1075,16 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-\[30px\]{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -982,13 +1110,25 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-\[20px\]{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .pb-4{
   padding-bottom: 1rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pl-6{
+  padding-left: 1.5rem;
 }
 
 .pr-10{
@@ -1003,20 +1143,16 @@ video {
   padding-top: 0.25rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
-}
-
-.pt-2{
-  padding-top: 0.5rem;
-}
-
 .pt-4{
   padding-top: 1rem;
 }
 
-.font-lato{
-  font-family: Lato, sans-serif;
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.text-left{
+  text-align: left;
 }
 
 .font-poppins{
@@ -1047,16 +1183,17 @@ video {
   font-size: 20px;
 }
 
-.text-\[25px\]{
-  font-size: 25px;
-}
-
 .text-\[30px\]{
   font-size: 30px;
 }
 
 .text-\[80px\]{
   font-size: 80px;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xs{
@@ -1068,6 +1205,10 @@ video {
   font-weight: 700;
 }
 
+.font-light{
+  font-weight: 300;
+}
+
 .font-medium{
   font-weight: 500;
 }
@@ -1076,12 +1217,21 @@ video {
   font-weight: 400;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .uppercase{
   text-transform: uppercase;
 }
 
 .leading-tight{
   line-height: 1.25;
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-300{
@@ -1102,6 +1252,16 @@ video {
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-purple-500{
+  --tw-text-opacity: 1;
+  color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 
 .text-red-400{
@@ -1137,6 +1297,11 @@ video {
 .text-slate-600{
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
+.text-slate-800{
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 
 .text-teal-600{
@@ -1175,6 +1340,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.backdrop-blur-sm{
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1195,6 +1372,10 @@ video {
 
 .duration-500{
   transition-duration: 500ms;
+}
+
+.duration-700{
+  transition-duration: 700ms;
 }
 
 .duration-\[800ms\]{
@@ -1335,6 +1516,14 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:w-\[150px\]{
+    width: 150px;
+  }
+
+  .md\:w-\[49\%\]{
+    width: 49%;
+  }
+
   .md\:w-full{
     width: 100%;
   }
