updated auth screens UI setup

--- a/src/output.css
+++ b/src/output.css
@@ -582,6 +582,14 @@ video {
   z-index: 5;
 }
 
+.z-20{
+  z-index: 20;
+}
+
+.-z-20{
+  z-index: -20;
+}
+
 .col-span-6{
   grid-column: span 6 / span 6;
 }
@@ -594,6 +602,11 @@ video {
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .-ml-1{
@@ -854,6 +867,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end{
+  justify-content: flex-end;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -971,12 +988,21 @@ video {
   border-bottom-left-radius: 0.75rem;
 }
 
+.rounded-b{
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
 .border{
   border-width: 1px;
 }
 
 .border-2{
   border-width: 2px;
+}
+
+.border-0{
+  border-width: 0px;
 }
 
 .border-b{
@@ -1116,6 +1142,36 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ffffff\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ffffff30\]{
+  background-color: #ffffff30;
+}
+
+.bg-\[\#\]{
+  background-color: #;
+}
+
+.bg-\[\#ffffff0\]{
+  background-color: #ffffff0;
+}
+
+.bg-\[\#ffffff00\]{
+  background-color: #ffffff00;
+}
+
+.bg-opacity-5{
+  --tw-bg-opacity: 0.05;
+}
+
 .bg-\[url\(\"src\/assets\/images\/bg__1\.png\"\)\]{
   background-image: url("src/assets/images/bg__1.png");
 }
@@ -1126,6 +1182,10 @@ video {
 
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-none{
+  background-image: none;
 }
 
 .from-gray-900{
@@ -1596,6 +1656,16 @@ video {
 
 .placeholder\:text-\[14px\]::placeholder{
   font-size: 14px;
+}
+
+.placeholder\:text-white::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:-translate-x-1:hover{
