--- a/src/output.css
+++ b/src/output.css
@@ -693,6 +693,10 @@ video {
   height: 1.25rem;
 }
 
+.h-\[140px\]{
+  height: 140px;
+}
+
 .h-\[200px\]{
   height: 200px;
 }
@@ -763,6 +767,10 @@ video {
 
 .w-\[150px\]{
   width: 150px;
+}
+
+.w-\[20\%\]{
+  width: 20%;
 }
 
 .w-\[20px\]{
